--- a/android-intent-dispatch/src/main/res/layout/activity_main.xml
+++ b/android-intent-dispatch/src/main/res/layout/activity_main.xml
@@ -1,7 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.s5r.android.intentdispatch.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="18dp"
+    >
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:layout_marginTop="12dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:layout_marginTop="12dp"
+        android:gravity="center"
+        android:text="カメラインテントを経由して\nギャラリーアプリを開くことができます"
+        />
+
+</LinearLayout>
